# smithy-rs-pokemon-service

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  gradle.properties  serde.patch  settings.gradle.kts
docs/: slides.md
docs/assets/: example-result.json  flavor_text.smithy  input_and_output.smithy
docs/slides/: slides.html  slides.md
docs/slides/assets/: get_pokemon_species_sig.py  get_pokemon_species_sig.rs  pokemon.smithy  run_with_hyper.rs  service_and_operation.smithy  smithy-example.smithy
docs/template/: Cargo.toml  gitignore  gradle.properties  new.sh
docs/template/model/: build.gradle.kts  main.smithy  smithy-build.json
model/: build.gradle.kts  pokemon.smithy  smithy-build.json
pokemon-service/: Cargo.toml  build.rs
pokemon-service/src/: lib.rs  main.rs  state.rs  tls.rs
pokemon-service/tests/: helpers.rs  integration_test.rs
