[package]
name = "pokemon-service"
version = "0.1.0"
edition = "2021"
authors = ["Bigo <bigo@crisidev.org>"]
description = "The Pokémon Service allows you to retrieve information about Pokémon species."
documentation = "https://github.com/crisidev/smithy-rs-pokemon-service/README.md"
readme = "README.md"
homepage = "https://github.com/crisidev/smithy-rs-pokemon-service"
repository = "https://github.com/crisidev/smithy-rs-pokemon-service/"
license = "MIT"

[dependencies]
# First-party dependencies.
pokemon-service-server-sdk = { path = "../pokemon-service-server-sdk/" }

# Third-party dependencies.
aws-smithy-http-server = { version = "0.51.0" }
clap = { version = "~3.2.1", features = ["derive"] }
futures-util = "0.3"
hyper = { version = "0.14.12", features = ["server"] }
rand = "0.8"
rustls-pemfile = "1.0.1"
tokio = "1"
tokio-rustls = "0.23.4"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
tls-listener = { version = "0.5.1", features = ["rustls", "hyper-h2"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# First-party dependencies.
pokemon-service-client-sdk = { path = "../pokemon-service-client-sdk/" }

# Third-party dependencies.
aws-smithy-client = { version = "0.51.0", features = ["rustls"] }
aws-smithy-http = { version = "0.51.0" }
assert_cmd = "2.0"
hyper-rustls = { version = "0.23.0", features = ["http2"] }
home = "0.5"
serial_test = "0.9.0"
